--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
     "input-otp": "1.4.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
-    "next": "16.0.0",
-    "nodemailer": "^6.9.8",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.9.8",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-is": "^19.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "sonner": "^1.7.4",
